--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 	    },
 	    "publish": {
 	    	"provider": "github",
-	    	"repo": "electron-app",
+	    	"repo": "nsisweb",
 	    	"owner": "lindaifu",
 	    	"releaseType": "release"
 	    }
